--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ed2k"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Andreas Runfalk <andreas@runfalk.se>"]
 edition = "2021"
 license = "MIT"
@@ -14,6 +14,6 @@ md4 = "0.10"
 
 [dev-dependencies]
 anyhow = "1"
+clap = { version = "3", features = ["derive"] }
 crossbeam = "0.8"
 num_cpus = "1.0"
-structopt = "0.3"
